<resources>

    <string name="app_name">Keeper Matchmaking</string>
    <string name="action_settings">Settings</string>
<string name="action_details">Conversation Details</string>
<string name="action_sendlogs">Send Debug Info</string>

<string name="title_conversations_list">Conversations</string>
<string name="title_select_conversation">New Message</string>
<string name="title_messages_list">Messages</string>
<string name="title_settings">Settings</string>
<string name="title_conversation_details">Details</string>

<string name="alert_message_resuming">Resuming Session</string>

<string name="alert_message_logout">Log out?</string>
<string name="alert_message_delete_message">Delete message?</string>
<string name="alert_message_delete_conversation">Delete conversation?</string>

<string name="alert_dialog_logout">Logging Out&#8230;</string>

<string name="alert_button_cancel">Cancel</string>
<string name="alert_button_delete_my_devices">For Me</string>
<string name="alert_button_delete_all_participants">From All</string>
<string name="alert_button_remove">Remove</string>
<string name="alert_button_block">Block</string>
<string name="alert_button_unblock">Unblock</string>
<string name="alert_button_logout">Log Out</string>

<string name="attachment_menu_camera">Camera</string>
<string name="attachment_menu_gallery">Gallery</string>
<string name="attachment_menu_location">Location</string>

<string name="toast_group_name_updated">Group name updated</string>
<string name="toast_failed_to_deauthenticate">Failed to deauthenticate: %1$s</string>
<string name="toast_copied_to_clipboard">Copied to clipboard</string>

<string name="conversation_details_title_options">Options</string>
<string name="conversation_details_hint_group_name">Group Name</string>
<string name="conversation_details_switch_show_notifications">Show Notifications</string>
<string name="conversation_details_button_leave_group">Leave Group</string>
<string name="conversation_details_title_participants">Participants</string>
<string name="conversation_details_button_add_participants">Add Participants</string>

<string name="settings_clipboard_description">Settings</string>
<string name="settings_content_connected">Connected</string>
<string name="settings_content_disconnected">Disconnected</string>
<string name="settings_content_app_version">Name %1$s / Code %2$d</string>
<string name="settings_content_android_version">Version %1$s / API level %2$d</string>
<string name="settings_content_disk_unlimited">Unlimited</string>
<string name="settings_content_disk_usage">%1$.2f %2$s</string>
<string name="settings_content_disk_gb">GB</string>
<string name="settings_content_disk_mb">MB</string>
<string name="settings_content_disk_kb">KB</string>
<string name="settings_content_disk_b">B</string>
<string name="settings_title_account">Account</string>
<string name="settings_button_log_out">Log Out</string>
<string name="settings_title_notifications">Notifications</string>
<string name="settings_switch_show_notifications">Show Notifications</string>
<string name="settings_title_debug">Debug</string>
<string name="settings_switch_verbose_logging">Verbose Logging</string>
<string name="settings_title_app_version">App Version</string>
<string name="settings_title_android_version">Android Version</string>
<string name="settings_title_atlas_version">Atlas Version</string>
<string name="settings_title_layer_version">Layer Version</string>
<string name="settings_title_user_id">User ID</string>
<string name="settings_title_statistics">Statistics</string>
<string name="settings_title_conversations">Conversations</string>
<string name="settings_title_messages">Messages</string>
<string name="settings_title_unread_messages">Unread Messages</string>
<string name="settings_title_rich_content">Rich Content</string>
<string name="settings_title_disk_utilization">Disk Utilization</string>
<string name="settings_title_disk_allowance">Disk Allowance</string>
<string name="settings_title_auto_download_types">Auto-Download MIME Types</string>
<string name="settings_not_authenticated">No authenticated user</string>

<string name="notifications_num_more">+%1$d more</string>
<string name="notifications_new_messages">%1$d new messages</string>

<string name="push_notification_no_content_title">New message (tap to sync)</string>
    <!--<string name="facebook_app_id">661433064031275</string>-->
    <!--<string name="fb_login_protocol_scheme">fb661433064031275</string>-->
    <string name="facebook_app_id">380735128760092</string>
    <string name="fb_login_protocol_scheme">fb380735128760092</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_user">Welcome to Keeper!</string>
    <string name="welcome_to_keeper">Welcome to Keeper</string>
    <string name="education">Education</string>
    <string name="stanford_berkeley_mba">Stanford, Berkeley (MBA)</string>
    <string name="product_manager_square">Product Manager @ Square</string>
    <string name="what_is_your_occupation">What is your occupation?</string>
    <string name="zip_code">Zip code</string>
    <string name="interested_in">Interested in</string>
    <string name="example_zipcode">94103</string>
    <string name="height">Height</string>
    <string name="ethnicity">Ethnicity (optional*)</string>
    <string name="american_indian">American Indian</string>
    <string name="black">Black</string>
    <string name="east_asian">East Asian</string>
    <string name="hispanic">Hispanic</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="pacific_islander">Pacific Islander</string>
    <string name="south_asian">South Asian</string>
    <string name="white">White</string>
    <string name="other">Other</string>
    <string name="religion">Religion (optional*)</string>
    <string name="agnostic">Agnostic</string>
    <string name="atheist">Atheist</string>
    <string name="buddhist">Buddhist</string>
    <string name="christian">Christian</string>
    <string name="hindu">Hindu</string>
    <string name="jewish">Jewish</string>
    <string name="muslim">Muslim</string>
    <string name="catholic">Catholic</string>
    <string name="spirtual">Spirtual</string>
    <string name="other_religion">Other</string>
    <string name="done">Done</string>
    <string name="girls">Girls</string>
    <string name="guys">Guys</string>
    <string name="both">Both</string>
    <string name="what_is_your_relationship_status">What is your relationship status?</string>
    <string name="continue_to_advanced_new_user_info">Continue</string>
    <string name="single">Single</string>
    <string name="taken">Taken</string>
    <string name="ethnicity_and_religion_advice">* omitting ethnicity and religion may decrease your profile visibility to users with filters, so we reccomend setting these</string>
    <string name="by">By</string>
    <string name="see_my_vouches">See my vouches</string>
    resources>
    <string-array name="height_feet_inches">
        <item>4\'-11\"</item>
        <item>5\'-0\"</item>
        <item>5\'-1\"</item>
        <item>5\'-2\"</item>

    </string-array>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_single_menu">SingleMenuActivity</string>
</resources>
