<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/religion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvReligion" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:text="@string/agnostic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgnostic" />

    <Button
        android:text="@string/christian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChristian" />

    <Button
        android:text="@string/hindu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHindu" />

    <Button
        android:text="@string/muslim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMuslim" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/catholic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCatholic" />

        <Button
            android:text="@string/jewish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnJewish"
            />

        <Button
            android:text="@string/buddhist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBuddhist"
            />

        <Button
            android:text="@string/atheist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAtheist"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/spirtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSpiritual" />

        <Button
            android:text="@string/other_religion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOtherReligion" />

    </LinearLayout>

</LinearLayout>