<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <Button
        android:text="@string/continue_to_advanced_new_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnContinue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llRelationshipStatus">
        <TextView
            android:text="@string/what_is_your_relationship_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRelationshipStatus"
            />

        <include layout="@layout/button_group_relationship_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llInterestedIn"
            android:visibility="gone">
        <TextView
            android:text="@string/interested_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvInterestedIn"
            />

        <include layout="@layout/button_group_interested_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llZipCode"
            android:visibility="gone">
        <TextView
            android:text="@string/zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvZipcode"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/etZipcode"
            android:hint="@string/example_zipcode"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llOccupation"
            android:visibility="gone">
        <TextView
            android:text="@string/what_is_your_occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOccupation"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etOccupation"
            android:hint="@string/product_manager_square"
            />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llEducation"
            android:visibility="gone">

        <TextView
            android:text="@string/education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/stanford_berkeley_mba"
            android:id="@+id/etEducation"
            />
            </LinearLayout>

    </LinearLayout>

</RelativeLayout>
